# Manifold

./: Cargo.toml  README.md
crates/manifold-cli/: Cargo.toml
crates/manifold-cli/src/: main.rs
crates/manifold-cli/tests/: integration_tests.rs  multi_engine_integration.rs
crates/manifold-config/: Cargo.toml
crates/manifold-config/src/: lib.rs
crates/manifold-pdk/: Cargo.toml
crates/manifold-pdk/src/: lib.rs
crates/manifold-runtime/: Cargo.toml
crates/manifold-runtime/src/: lib.rs
crates/manifold-store/: Cargo.toml
crates/manifold-store/src/: lib.rs
crates/manifold-types/: Cargo.toml
crates/manifold-types/src/: lib.rs
crates/manifold-uiua/: Cargo.toml
crates/manifold-uiua/src/: lib.rs
examples/: demo.py  pipeline_wasm.yaml  test_pipe.go  test_pipe.js
examples/transformer/: Cargo.toml
examples/transformer/src/: lib.rs
