[package]
name = "manifold-cli"
version = "4.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
serde_json = "1.0"
thiserror = "1.0"
colored = "2.0"
uuid = { version = "1", features = ["v4"] }
tabled = "0.6"
manifold-config = { path = "../manifold-config" }
manifold-runtime = { path = "../manifold-runtime" }
manifold-store = { path = "../manifold-store" }
manifold-types = { path = "../manifold-types" }
manifold-uiua = { path = "../manifold-uiua" }
toml = "0.7"
wasmparser = "0.110"
memmap2 = "0.7"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
async-trait = "0.1"

[features]
rocksdb = ["manifold-store/rocksdb"]
