[package]
name = "manifold-runtime"
version = "4.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"
manifold-config = { path = "../manifold-config" }
manifold-store = { path = "../manifold-store" }
manifold-types = { path = "../manifold-types" }
wasmtime = { version = "8.0", default-features = false, features = ["cranelift", "async"] }
wat = "1.0"
async-trait = "0.1"
