[package]
name = "manifold-store"
version = "4.2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
manifold-types = { path = "../manifold-types" }
rocksdb = { version = "0.20", optional = true }
once_cell = "1.17"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
