[package]
name = "manifold-types"
version = "4.2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
